<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoAseo</string>
    <string name="hello_world">Hello world!</string>
    <string name="Button_save">Guardar</string>
    <string name="accept_button">ACEPTAR</string>
    <string name="confirm_button_1">SI</string>
    <string name="confirm_button_2">NO</string>
    
    <string name="title_activity_b__menu_principal">B_MenuPrincipal</string>
    <string name="title_activity_c__grupo_trabajo">C_GrupoTrabajo</string>
    <string name="title_activity_d__iniciar_dia">D_IniciarDia</string>
    <string name="title_activity_e__menu_ciclo">E_MenuCiclo</string>
    <string name="title_activity_e__menu_en_ciclo">E_MenuEnCiclo</string>
    <string name="title_activity_f__seleccionar_ruta">F_SeleccionarRuta</string>
    <string name="title_activity_g__ticket_relleno">G_TicketRelleno</string>
    <string name="title_activity_h__registrar_inoperatividad">H_RegistrarInoperatividad</string>
    <string name="title_activity_i__crear_ruta">I_CrearRuta</string>
    <string name="title_activity_j__cerrar_ruta">J_CerrarRuta</string>
    <string name="title_activity_k__registrar_combustible">K_RegistrarCombustible</string>
    <string name="title_activity_l__registrar_peaje">L_RegistrarPeaje</string>
    <string name="title_activity_m__visualizar_mapa">M_VisualizarMapa</string>

      <!-- A Login -->
    <string name="txtUser">Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="toastIncompleteFields">Hay campos incompletos</string>
    <string name="toastErrorLogin">Error al iniciar sesión</string>
    <string name="titleProgress">Iniciando sesión</string>
    <string name="messageProgress">Por favor espere un momento&#8230;</string>
    <string name="toastInternetFail">No hay conexión a internet.</string>
    
    <!-- B Menu Principal -->
    <string name="date_example">24/07/2014</string>
    <string name="logout">X</string>
    <string name="logout_confirm">¿Deseas cerrar sesión?</string>
    <string name="logout_conten_description">Boton para cerrar sesiÃ³n</string>
    <string name="group_of_work_description">Boton para crear grupo de trabajo</string>
    <string name="start_day_description">Boton para iniciar dia</string>
    <string name="Create_route_description">Boton para crear una ruta</string>
    <string name="Close_route_description">Boton para cerrar una ruta</string>
    <string name="Bottom_banner_description">Banner inferior</string>
    <string name="Maps_description">Boton para cargar el mapa</string>
    <string name="Gas_description">Boton para comprar gasolina</string>
    <string name="Toll_description">Boton para pagar un peaje</string>
    <string name="AreYouSureCloseDay">¿ESTA USTED SEGURO DE QUERER CERRAR EL DIA?</string>

    <!-- C Grupo de trabajo -->
    <string name="selectedOperaors">Operarios seleccionados:</string>
    <string name="searchOperator">Buscar operario</string>
    <string name="title_activity_c__item_selected_operator">C_ItemSelectedOperator</string>
    <string name="alertVoidListOperators">SELECCIONE LOS OPERARIOS PARA INICIAR EL DIA.</string>
    <string name="alertFinishJourneyWithoutRouteInit">NO SE PUEDE TERMINAR LA JORNADA SIN ANTES HABER INICIADO UNA RUTA.</string>
    <string name="alertFinishJourneyAllWithoutOperators">TODOS LOS OPERARIOS HAN TERMINADO SUS JORNADAS.</string>
    <string name="confirmFinishAllOperators">¿REALMENTE DESEA FINALIZAR LA JORNADA DE TODOS LOS OPERARIOS?</string>
    <string name="confirmSelectedOperators">¿REALMENTE DESEA INICIAR CON LOS OPERARIOS SELECCIONADOS?</string>
    <string name="confirmEndJourney">¿REALMENTE DESEA TERMINAR LA JORNADA DE ESTE OPERARIO?</string>
    <string name="btnFinishAll">Finalizar todos</string>
    
    <!-- D Datos del vehiculo -->
    <string name="truck_dates_hour_meter">HOROMETRO</string>
    <string name="truck_dates_odometer">ODOMETRO</string>
    <string name="alertEditTextEmpty">COMPLETE LOS CAMPOS PARA PODER CONTINUAR</string>
    <string name="alertOdometer">EL VALOR DE SU ODOMETRO DEL DIA ANTERIOR ES:</string>
    <string name="alertHourMeter">EL VALOR DE SU HOROMETRO DEL DIA ANTERIOR ES:</string>
    <string name="alertAux">, EL NUEVO VALOR NO PUEDE SER MENOR.</string>
    
    <!-- E Menu de ciclo -->
    <string name="addOperators">DEBE AGREGAR UN GRUPO DE OPERARIOS</string>
    <string name="baseOutput">ESTA SEGURO QUE VA A SALIR DE LA BASE</string>
    <string name="sureCompaction">SEGURO QUE DESEA REALIZAR UNA COMPACTACIÓN</string>
    <string name="confirmFinishCollection">DESEA FINALIZAR EL PORTE</string>
    <string name="alertFinishColectionOne">HA FINALIZADO EL PORTE EN LA RUTA </string>
    <string name="alertFinishColectionTwo">¿HA TERMINADO DE LIMPIARLA? </string>
    <string name="areYouSureBase">ESTA SEGURO QUE LLEGO A LA BASE </string>
    
    <!-- F Seleccionar ruta -->
    <string name="lblSelectedRoute">Ruta seleccionada:</string>
    <string name="lblSheetNumber">Número de hoja:</string>
    <string name="routeState">Estado de la ruta:</string>
    <string name="toastLoadRoutes">Error al cargar las rutas</string>
    <string name="alertNotSelectedRoute">NO SE HA SELECCIONADO NINGUNA RUTA.</string>
    <string name="alertRouteStarted">LA RUTA HA SIDO INICIADA SATISFACTORIAMENTE.</string>
    <string name="lblBotomBar">Grupo de trabajo</string>
    <string name="btnContinueRoute">Continuar</string>
    <string name="btnStartRoute">Iniciar</string>
    <string name="startRoute">Iniciar</string>
    <string name="title_activity_g_form_tiket_exit">G_form_tiket_exit</string>
    
    <!-- H Registrar inoperatividad -->
    <string name="lblInoperativityReason">Motivo:</string>
    <string name="hntTxtInoperativityDescription">Observación</string>
    <string name="btnInoperativityStart">Iniciar</string>
    <string name="btnInoperativityTerminar">Terminar</string>
    <string name="rdoAccident">Accidente</string>
    <string name="btnStrandedVehicle">Vehículo varado</string>
    <string name="btnTraffic">Tráfico</string>
    <string name="btnDamageAnotherCar">Daño otro vehículo</string>
    <string name="btnDamageAProperty">Daño otro inmueble</string>
    <string name="btnPublicOrder">Orden público</string>
    <string name="lblBottomInoperativity">Inoperatividad</string>
    <string name="confirmStartInoperability">¿REALMENTE DESEA INICIAR INOPERATIVIDAD?</string>
    <string name="confirmFinishInoperability">¿REALMENTE DESEA TERMINAR INOPERATIVIDAD?</string>
    <string name="alertVoidDetail">DEBE AGREGAR UNA OBSERVACION DE INOPERATIVIDAD</string>
    
    <!-- G REGISTRAR TIKET -->
    <string-array name="kindOfRecidue">
        <item>Doméstica</item>
        <item>Escombros</item>
        <item>Podas</item>
    </string-array>
    <string name="alertTicketEmpty"> DEBE COMPLETAR LOS CAMPOS NUMERO Y PESO DEL TIKET</string>
   
    
    <!-- I CREAR RUTA -->
    <string name="lblBottomCrateRoute">Crear ruta</string>
    <string name="lblSelectTheRoute">Seleccione la ruta</string>
    <string name="lblSelectTypeOfRoute">Seleccione el tipo de ruta</string>
    <string name="hntSearchRoute">Buscar ruta por nombre</string>
    <string name="btnSupport">Apoyo</string>
    <string name="btnRegularCollection">Recoleccion de ordinarios</string>
    <string name="btnSweepCollection">Recoleccion de barrido</string>
    <string name="btnTransport">Transporte</string>
    <string name="btnDebris">Escombros</string>
    <string name="btnSludge">Lodos</string>
    <string name="btnSave">Guardar</string>
 	
    <!-- J CERRAR RUTA -->
    <string name="lblNotSelection">No hay nada seleccionado</string>
    <string name="lblButtonCloseRoute">Cerrar ruta</string>
    
    <!-- L REGISTRAR PEAJE -->
    <string name="newTicketToll">Numero del Ticket del peaje</string>
    <string name="registerToll">Registrar Peaje</string>
    <string name="numberToll"># Ticket</string>
    <string name="truckInformation">Datos del vehículo</string>
    <string name="alertEmptyToll">INTRODUCE EL NUEMRO DE TICKET Y SELECCIONA UN TIPO DE PEAJE PARA CONTINUAR</string>
    <string name="alertPayToll">SEGURO QUE PAGO UN PEAJE TIPO</string>
    
</resources>
