<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >
    
    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/blue1"
            android:padding="10dp"
            android:text="@string/date_example"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="25sp" />

        <DigitalClock
            android:id="@+id/clock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextView1"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/TextView1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/btn_Logout"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_conten_description"
            android:onClick="logOut"
            android:src="@drawable/btn_logout" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:text="@string/lblInoperativityReason"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/btnAccident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rdoAccident"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/btnVarado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnStrandedVehicle"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/btnTrafico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnTraffic"
                android:textSize="25sp" />
            
            <RadioButton
                android:id="@+id/btnDanoVehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnDamageAnotherCar"
                android:textSize="25sp" />
            
            <RadioButton
                android:id="@+id/btnDanoInmueble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnDamageAProperty"
                android:textSize="25sp" />
            
            <RadioButton
                android:id="@+id/btnOrdenPublico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnPublicOrder"
                android:textSize="25sp" />

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/txtDetail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hntTxtInoperativityDescription"
        android:inputType="text"
        android:maxLines="2"
        android:textSize="25sp" >
        
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp" >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:onClick="start"
            android:text="@string/btnInoperativityStart"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:enabled="false"
            android:onClick="finish"
            android:text="@string/btnInoperativityTerminar"
            android:textSize="25sp" />

    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@color/blue1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bar_bottom" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="115dp"
            android:text="@string/lblBottomInoperativity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="25sp" />
	
    </RelativeLayout>

</LinearLayout>