<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >
    
    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/blue1"
            android:hint="@string/date_example"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="25sp" />

        <DigitalClock
            android:id="@+id/clock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextView1"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/TextView1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/btn_Logout"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_conten_description"
            android:onClick="logOut"
            android:src="@drawable/btn_logout" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="90" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/lblSelectedRoute"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lblSelectedRoute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/lblSheetNumber"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lblSelectedSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/routeState"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/lblRouteState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/lstRoutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50" >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="startRoute"
            android:text="@string/startRoute" />

    </LinearLayout>

</LinearLayout>
